Bug 1733301 generate action ID for focusmanager.testmode WindowRaised() at time of call r=hsivonen

for consistency with OS-triggered calls
https://searchfox.org/mozilla-central/rev/b022ae1fc071ad7a29f64f281bc19b7b093df538/xpfe/appshell/AppWindow.cpp#3005
and so that interleaved element-focus actions don't make the active toplevel
window change notification (and its associated content window focus changes)
stale.

Differential Revision: https://phabricator.services.mozilla.com/D127029